[package]
name = "event-listener-strategy"
# Make sure to update CHANGELOG.md when the version is bumped here.
version = "0.5.2"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]
rust-version = "1.60"
description = "Block or poll on event_listener easily"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/event-listener-strategy"
keywords = ["condvar", "envcount", "wake", "blocking", "park"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
event-listener = { version = "5.0.0", default-features = false }
pin-project-lite = "0.2.12"

[features]
default = ["std"]
std = ["event-listener/std"]

[dev-dependencies]
futures-lite = "2.0.0"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.37"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
